// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of a table header 1`] = `
<thead
  className=""
>
  <tr
    className=""
  />
</thead>
`;

exports[`Table header with a custom class 1`] = `
<thead
  className="foo"
>
  <tr
    className=""
  />
</thead>
`;
